[package]
name = "poker-engine"
version = "0.1.0"
edition = "2021"

[lib]
# Движок — это обычная Rust-библиотека, НЕ WASM.
# Только rlib достаточно.
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
blake3 = "1.5"
sha2 = "0.10.9"

# rand используется ТОЛЬКО на native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.8"

[dev-dependencies]
tokio = { version = "1.40", features = ["rt", "sync"] }
